# thcllm

./: .gitignore  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  RELATORIO_TECNICO.md  Thc loja · MD  app.py  auth.py  config.py  exceptions.py  index.html  kilo.jsonc  logger.py  models.py  requirements.txt  teste.py
.github/workflows/: reviewer.yml
.kilo/: config.json  mcp.json
.playwright-mcp/: page-2026-07-19T07-58-32-045Z.yml
knowledge/: thc-loja.md
scripts/: build_release.sh  install.sh
skills/: atendimento.md
tests/: MANUAL_CHECKLIST.md  test_agente_real_pexpect.py  test_memory.py  test_provider_fallback.py  test_providers_rate_limit.py  test_robustez_fase1b_2_1.py  test_skills.py  test_tokens.py
thc_cli/: main.py  pyproject.toml
thc_cli/commands/: __init__.py  chat.py  code.py  models.py  quota.py
thc_cli/core/: __init__.py  agent.py  client.py  config.py  memory.py  plan.py  provider_fallback.py  session.py  skills.py  system_prompt.py  tokens.py  ui.py
thc_cli/core/providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  mistral_provider.py  openrouter_provider.py  thc_provider.py
thc_cli/core/tools/: __init__.py  bash_tool.py  file_tools.py  memory_tools.py  todo_tool.py  web_tools.py
